# battery-rul-predictor

./: .gitignore  CHANGELOG.md  CHECKPOINTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
battery_rul/: config.py
battery_rul/dashboard/: app.py
battery_rul/dashboard/assets/: style.css
battery_rul/data/: dataset.py  download.py  preprocess.py
battery_rul/evaluation/: metrics.py  predictions.py
battery_rul/inference/: api.py  predictor.py
battery_rul/models/: attention.py  lstm.py  trees.py
battery_rul/training/: trainer.py  tree_trainer.py  tuning.py
docs/: architecture.md  paper_transcription.md
notebooks/: 02_model_comparison.ipynb
src/battery_rul/: config.py
src/battery_rul/dashboard/: app.py
src/battery_rul/models/: dnn.py
tests/: test_models.py
