[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "battery-rul"
version = "0.1.0"
description = "Predicting Li-ion battery SOH/RUL with deep learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "mlflow>=2.10",
    "optuna>=3.5",
    "plotly>=5.18",
    "dash>=2.15",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "pyarrow>=15.0",
    "requests>=2.31",
    "lightgbm>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "black>=24.1",
    "mypy>=1.8",
    "httpx>=0.27",
    "jupyter>=1.0",
    "nbconvert>=7.16",
]

[tool.hatch.build.targets.wheel]
packages = ["battery_rul"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
